menambahkan css masking

--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
     <!--navbar end-->
     <!--hero section strat-->
     <section class="hero" id="home">
-      <main class="content">
-        <h1>Nikmatilah Kopi <span>Estetika</span></h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis,
-          quas.
-        </p>
-        <a href="#" class="cta">Beli Sekarang</a>
-      </main>
+      <div class="mask-container">
+        <main class="content">
+          <h1>Nikmatilah Kopi <span>Estetika</span></h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Blanditiis, quas.
+          </p>
+        </main>
+      </div>
     </section>
 
     <!--hero section end-->
